manifests/bookingservice-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "false"
  name: flight-ingress
spec:
  rules:
  - host:
    http:
      paths:
      - path: /booking
        backend:
          serviceName: booking-service
          servicePort: 9080
